# forge

./: .coverage  .env.example  .gitattributes  .gitignore  LICENSE  README.md  TEMPLATE.md  biome.json  components.json  index.html  orchestrator.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/issue_template/: hotfix_bug_report.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pull_request_template.md
agents/: engineering.xml  growth_ops.xml  product_spec.xml
docs/: backlog.md  contract.md  current_run.md
docs/company/: feedback_log.md  lessons_learned.md  personas.md  scorecard.md  thesis.md
docs/ops/: experiment_log.md  launch_checklist.md
docs/product/: architecture.md  backlog.md  current_run.md  flows.md  style_guide.md
docs/product/adr/: README.md
docs/product/briefs/: discord_integration.md  discord_integration_design_handoff.md  system_status.md
docs/product/contracts/: discord_webhook.md  system_status.md
docs/templates/: adr.md  contract.md  design_blueprint.md  feature_brief.md  lessons_learned.md  teardown_manifest.md
engine/: ast_parser.py  cli.py  llm.py  runtime.py  tools.py
engine/agents/: design.xml  growth_ops.xml
scripts/: ast_validator.mjs
scripts/githooks/: pre-commit
skills/: coding.xml  design.xml  engineering.xml  growth_ops.xml  orchestrator.xml  product_spec.xml  strategy.xml
src/api/: Dockerfile  main.py
src/api/routers/: system.py
src/web/: index.css  main.tsx
src/web/components/: system-status.tsx
src/web/components/ui/: button.tsx  card.tsx
src/web/lib/: content.ts
tests/: setup.ts
tests/api/: test_initial.py
tests/engine/: test_ast_parser.py  test_cli.py  test_llm.py  test_runtime.py  test_tools.py
tests/evals/: ast_validator.test.ts  test_agents.py  test_orchestrator.py
tests/ts/: ast_validator.test.ts
tests/web/: a11y.e2e.ts  integration.e2e.ts  system-status.test.tsx
