[project]
name = "solopreneur-os"
version = "0.1.0"
description = "Autonomous operating system for a solo founder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "litellm>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear, S: flake8-bandit (Security)
select = ["E", "F", "I", "UP", "B", "S"] 
ignore = []

[tool.ruff.lint.per-file-ignores]
# Ignore `S101` (use of assert) in all test files
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
addopts = "-v -m \"not eval\" --strict-markers --cov=orchestrator --cov-report=term-missing --cov-fail-under=40"
pythonpath = "."
testpaths = ["tests/api", "tests/evals"] 
markers = [
    "core: core system functionality",
    "integration: testing 3rd party APIs",
    "eval: AI evaluation tests (makes real LLM API calls, costs money)",
]